--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,38 @@
+body {
+  font-family: Roboto, sans-serif;
+  font-weight: 100;
+  font-size: 16px;
+  letter-spacing: 0.4px;
+  line-height: 1.5;
+  color: black;
+  background-color: white;
+}
+.cat-description {
+  flex-basis: calc((100% - 40px) / 2);
+}
+.cat-name {
+  font-size: 36px;
+}
+.cat-image {
+  font-display: block;
+  object-fit: contain;
+}
+.cat-image-box {
+  flex-basis: calc((100% - 40px) / 2);
+  height: 100%;
+}
+.cat-info-box {
+  justify-items: center;
+  width: 100%;
+  height: 800px;
+  display: flex;
+  gap: 40px;
+}
+.container {
+  width: 1200px;
+  padding-left: 36px;
+  padding-right: 36px;
+}
 .loader {
   width: 48px;
   height: 48px;
@@ -21,4 +56,10 @@
 }
 .hidden {
   display: none;
+}
+.search-box {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
 }
