--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,10 @@ body {
   padding-left: 36px;
   padding-right: 36px;
 }
+.error {
+  text-align: center;
+  font-size: 24px;
+}
 .loader {
   width: 48px;
   height: 48px;
